<resources>
    <string name="app_name">Favorite phrase</string>
    <string name="main_screen_title">Situations</string>
    <string name="note_text_no_happy_places_found_yet">Let\'s start writing your first note</string>
    <string name="image_content_description">image</string>
    <string name="edit_text_hint_phrase_today_in_japanese">日本語</string>
    <string name="edit_text_hint_phrase_today_in_english">English</string>
    <string name="edit_text_hint_date">Date</string>
    <string name="edit_text_hint_situation">Situation</string>
    <string name="edit_text_hint_key_word">Key word</string>
    <string name="edit_text_hint_color_label">Select color</string>
    <string name="text_add_image">ADD IMAGE</string>
    <string name="btn_text_create">CREATE</string>
    <!--    activity_intro-->
    <string name="let_s_get_started_text">Let\'s Get started</string>
    <string name="intro_text_description">You can build your English vocabulary \n writing dairy note.</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <!--    main_content-->
    <string name="no_card_available">No cards yet</string>
    <string name="text_view_search_here">  Search here…</string>

    <!--    activity_my_account-->
    <string name="update">UPDATE</string>
    <string name="my_account_title">My account</string>
    <!--    nav_header_main-->
    <string name="image_contentDescription">image</string>
    <string name="nav_header_main_title">English Note</string>
    <!--    activity_main_drawer-->
    <string name="nav_my_account">My Account</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="nav_tag_name">tags</string>
    <!--    activity_sign_up & activity_sign_in-->
    <string name="sign_up_description_text">Enter your name, email id and password, to register with us.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in_description_text">Enter your name, email id and password, to register with us.</string>
    <!--    base_activity-->
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <!--    dialog_progress-->
    <string name="please_wait">Please Wait&#8230;</string>
<!--    CardPhraseActivity-->
    <string name="main_content_card_phrase_title">Phrases</string>
    <!--    CreateCardSituationActivity-->
    <string name="create_card_situation_title">Create new situation card</string>
<!--    CreateCardPhraseActivity-->
    <string name="create_card_phrase_title">Create new phrase card</string>
    <string name="str_select_label_color">Select Label Color</string>
    <!--    EditCardSituationActivity-->
    <string name="edit_card_situation_title">Edit situation card</string>
<!--    EditCardPhraseActivity-->
    <string name="edit_card_phrase_title">Edit the phrase</string>
    <!--    activity_edit_note-->
    <string name="btn_done_edit_note">DONE</string>
    <!--    EditNoteActivity-->
    <string name="delete_note">Delete Note</string>
    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_note">Are you sure you want to delete this note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    menu_search_note-->
    <string name="search_note">Search</string>
    <!--    menu_edit_note-->
    <string name="edit_note_done">done</string>
    <!--    menu_create_note-->
    <string name="save_note">save</string>
    <!--    MainActivity-->
    <string name="speech_to_text_text_hint">Tap and hold the mic mark and say something!</string>

</resources>