<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_main_content_card_phrase"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/CustomNoActionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="@dimen/card_view_elevation"
        android:layout_marginStart="@dimen/card_view_margin"
        android:layout_marginTop="@dimen/card_view_margin"
        android:layout_marginEnd="@dimen/card_view_margin"
        app:cardCornerRadius="@dimen/card_view_corner_radius">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/et_show_speech_to_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/et_search_padding_start"
                android:paddingTop="@dimen/et_search_padding"
                android:paddingEnd="@dimen/et_search_padding"
                android:paddingBottom="@dimen/et_search_padding"
                android:background="@color/colorPrimaryDark"
                android:hint="@string/speech_to_text_text_hint"
                android:textSize="@dimen/edit_text_text_size"
                android:inputType="textMultiLine"
                android:maxLines="5"
                />

            <ImageButton
                android:id="@+id/ib_mic_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"
                android:contentDescription="@string/image_contentDescription"
                android:padding="@dimen/task_item_image_buttons_padding"
                android:src="@drawable/ic_mic_24dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_card_phrase_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:elevation="@dimen/card_view_elevation"
        android:layout_margin="@dimen/card_view_margin"
        app:cardCornerRadius="@dimen/card_view_corner_radius">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_card_phrase_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_no_card_phrase_available"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_card_available"
            android:textColor="@color/secondary_text_color"
            android:textSize="@dimen/no_notes_available_text_size" />

    </androidx.cardview.widget.CardView>

</LinearLayout>